--- a/blog.html
+++ b/blog.html
@@ -61,8 +61,7 @@
                             <img src="https://picsum.photos/1200/410/?random">
                             <div class="caption center-align">
                                 <h4 class="slide-text bold-text white-text">
-                                      TECNOLOGÍA Y ENTRENAMIENTO FÍSICO <br>
-                                      TODO LO QUE NECESITAS SABER
+                                      TECNOLOGÍA Y ENTRENAMIENTO FÍSICO TODO LO QUE NECESITAS SABER
                                 </h4>
                                 <h6 class="slide-text white-text light">
                                     Nuestro compromiso es seguir innovando
@@ -261,7 +260,8 @@
             $('.sidenav').sidenav();
             $('.slider').slider({
                 indicators: true,
-                height: 410
+                height: 410,
+                interval: 50000
             });
             new WOW().init();
         });
