--- a/products.html
+++ b/products.html
@@ -47,8 +47,8 @@
                 <li><a href="success.html">SUCCESS STORIES</a></li>
                 <li><a href="become.html">BECOME A COACH</a></li>
                 <li><a href="#!" id="shopbtn"><span>SHOP NOW</span></a></li>
-                <li><a href="" class="min-nav">SIGN IN</a></li>
-                <li><a href="" class="min-nav">ACTIVATE KIT</a></li>
+                <li><a href="#login" class="min-nav modal-trigger">SIGN IN</a></li>
+                <li><a href="activatekit.html" class="min-nav">ACTIVATE KIT</a></li>
                 <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
                 <li><a href="" class="min-nav">Help</a></li>
         </ul>
@@ -61,7 +61,7 @@
 
           <li>
             <img src="img/slides/slide3.jpg"> 
-            <div class="caption left-align">
+            <div class="caption left-align hide-on-small-only">
                 <h4 class="slide-text bold-text">
                 Genetically tailored <br>
                 supplements for <br>
