--- a/success.html
+++ b/success.html
@@ -71,17 +71,19 @@
         <div class="grey lighten-3 col s12 marginTop30 ">
             <div class="container padding15 wow slideInLeft">
                 <div class="col s12 m5 left-align">
-                    <div class="col" style="width: 280px">
+                    <div class="col s8 m6" >
                         <img src="img/quote-left.png" width="32px" class="left" alt="">
                         <img src="img/quote-right.png" width="32px" class="right" alt="">
                     </div>
 
-                    <div class="col successContainerImg">
-                        <img class="successImg" src="img/success1.png" alt="">
-                        <div class="col s12">
-                            <h6 class="bold-text">Miguel Fuentes</h6>
-                            <h6>16 años</h6>
-                            <hr>
+                    <div class="col s8 m7 left">
+                        <div class="col successContainerImg">
+                            <img class="successImg" src="img/success1.png" alt="">
+                            <div class="col s12">
+                                <h6 class="bold-text">Miguel Fuentes</h6>
+                                <h6>16 años</h6>
+                                <hr>
+                            </div>
                         </div>
                     </div>
 
@@ -110,17 +112,18 @@
                     </p>
                 </div>
                 <div class="col s12 m6 ">
-                    <div class="col right" style="width: 280px">
+                    <div class="col s8 m7  right">
                         <img src="img/quote-left.png" width="32px" class="left" alt="">
                         <img src="img/quote-right.png" width="32px" class="right" alt="">
                     </div>
-
-                    <div class="col successContainerImg right">
-                        <img class="successImg" src="img/success2.png" alt="">
-                        <div class="col s12">
-                            <h6 class="bold-text">Miguel Fuentes</h6>
-                            <h6>16 años</h6>
-                            <hr>
+                    <div class="col s8 m6 right">
+                        <div class="col successContainerImg">
+                            <img class="successImg" src="img/success2.png" alt="">
+                            <div class="col s12">
+                                <h6 class="bold-text">Miguel Fuentes</h6>
+                                <h6>16 años</h6>
+                                <hr>
+                            </div>
                         </div>
                     </div>
                 </div>
