--- a/dashHome.html
+++ b/dashHome.html
@@ -85,16 +85,33 @@
             <a href="#profileModal" class="modal-trigger">Perfil</a>
         </li>
         <li>
-            <a href="#shippingModal" class="modal-trigger">Datos de envio</a>
+            <a href="#shippingModal" class="modal-trigger">Envio</a>
         </li>
         <li>
             <a href="#historyModal" class="modal-trigger">Historial</a>
         </li>     
         <li>
-            <a href="index.html">Cerrar Sesión</a>
+            <a href="index.html">Salir</a>
         </li>                   
     </ul>
     <!-- drop-down -->
+
+        <!-- drop-down mobile-->
+        <ul id="userDropM" class="dropdown-content">
+            <li>
+                <a href="#profileModal" class="modal-trigger">Perfil</a>
+            </li>
+            <li>
+                <a href="#shippingModal" class="modal-trigger">Envio</a>
+            </li>
+            <li>
+                <a href="#historyModal" class="modal-trigger">Historial</a>
+            </li>     
+            <li>
+                <a href="index.html">Salir</a>
+            </li>                   
+        </ul>
+        <!-- drop-down mobile-->
 <!--============================== PERFIL ===========================--> 
 <div id="profileModal" class="modal">
         <div class="modal-content center-align">
@@ -114,15 +131,15 @@
                         <label for="apellidoM">Apellido Materno</label>
                     </div>
                     <div id="changePsw" class="animated fadeIn hide">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12">
                             <input id="pwsOld" type="text" class="validate" required>
                             <label for="pwsOld">Contraseña antigua</label>
                         </div>
-                        <div class="input-field col s7">
+                        <div class="input-field col s12">
                             <input id="pwsNew" type="text" class="validate" required>
                             <label for="pwsNew">Nueva contraseña</label>
                         </div>
-                        <div class="input-field col s7">
+                        <div class="input-field col s12">
                             <input id="pws" type="text" class="validate" required>
                             <label for="pws">Confirmar contraseña</label>
                         </div>
@@ -292,7 +309,7 @@
                         </div>
                         <div class="input-field col s4">
                             <input id="date" type="text" class="validate" disabled>
-                            <label for="date">Fecha y Hora de transacción</label>
+                            <label for="date">Fecha y Hora</label>
                         </div>
                         <div class="input-field col s4">
                             <input id="t" type="text" class="validate" disabled>
@@ -337,19 +354,21 @@
     <!-- mobile-demo -->
     <ul class="sidenav" id="mobile-demo">
         <li>
-            <a href="">HOME</a>
+            <a href="dashHome.html">HOME</a>
         </li>
         <li>
-            <a href="">RESULTS</a>
+            <a href="results.html">RESULTS</a>
         </li>
         <li>
-            <a href="">SUPPLEMENTS</a>
+            <a href="supplements.html">SUPPLEMENTS</a>
         </li>
         <li>
-            <a href="">BLOG</a>
+            <a href="blog.html">BLOG</a>
         </li>
         <li>
-            <a href="">OTHER</a>
+            <a class="dropdown-trigger white" href="#!" data-target="userDropM">Rodrigo
+                <i class="material-icons min-text right">arrow_drop_down</i>
+            </a>
         </li>
     </ul>
     <!-- mobile-demo -->
