--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <ul class="sidenav" id="mobile-demo">
                 <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="">HOW IT WORKS</a></li>
-                <li><a href="">SUCCESS STORIES</a></li>
+                <li><a href="success.html">SUCCESS STORIES</a></li>
                 <li><a href="become.html">BECOME A COACH</a></li>
                 <li><a href="#!" id="shopbtn"><span>SHOP NOW</span></a></li>
-                <li><a href="" class="min-nav">SIGN IN</a></li>
-                <li><a href="" class="min-nav">ACTIVATE KIT</a></li>
+                <li><a href="#login" class="min-nav modal-trigger">SIGN IN</a></li>
+                <li><a href="activatekit.html" class="min-nav">ACTIVATE KIT</a></li>
                 <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
                 <li><a href="" class="min-nav">Help</a></li>
         </ul>
@@ -63,7 +63,7 @@
 
           <li>
             <img src="img/slides/slide1.jpg"> 
-            <div class="caption left-align">
+            <div class="caption left-align hide-on-small-only">
                 <h4 class="slide-text bold-text">
                 Genetic testing for<br>
                 personalized<br>
@@ -179,7 +179,7 @@
                     <label for="password">Contraseña</label>
                 </div>
                 <div  class="col s12">
-                    <button id="login" class="waves-effect btn orange white-text">
+                    <button id="loginBtn" class="waves-effect btn orange white-text">
                             INICIAR SESIÓN
                     </button>
                 </div>
