--- a/products.html
+++ b/products.html
@@ -92,13 +92,13 @@
         </div>
     </div>
 
-    <div id="secondMain" class="col s12 center-align">
+    <div id="secondMainP" class="col s12 center-align">
         <div class="container">
             <h5 class="bold-text">THE BEST VERSION OF YOU STARTS WITH MyGEN TESTS <br> AND SUPPLEMENTS</h5> <br>
             <p>Select the categories, goals and traits you want to improve and we’ll do the rest! <br>
             Depending on the number of tests selected, important discounts you will get.</p> <br>
             <center><p class="bold-text">MyGEN categories</p></center>
-            <div id="secondMainImg" class="col s12">
+            <div id="secondMainImgP" class="col s12">
                 <div class="col s6 m3" id="sport">
                     <img src="img/icons/muscles.svg"  class="wow fadeIn" data-wow-delay=".1s" alt="">
                     <p class="bold-text">Sports and active life</p>
