--- a/dashHome.html
+++ b/dashHome.html
@@ -550,14 +550,15 @@
                     </div>
                 </div>
             </div>
-
+            <div class="col s12 center-align hide-on-med-and-up">
+                <h4 class="hide-on-med-and-up"> Ancestry testing</h4>
+            </div>
             <div class="col s12" id="testing">
-
 
                 <div class="slider">
                     <ul class="slides">
                         <li>
-                            <div class="caption left-align">
+                            <div class="caption left-align col hide-on-small-only">
                                 <h4 class="slide-text bold-text">
                                     Ancestry testing
                                 </h4>
@@ -569,7 +570,7 @@
                                 </a>
 
                             </div>
-                            <div class="col right s12 m6">
+                            <div class="col s12 m6 right ">
                                 <canvas class="right-align marginTop30" id="doughnut" width="400" height="200"></canvas>
                                 <img src="#" alt="">
                             </div>
@@ -577,7 +578,7 @@
                         </li>
                         <li>
 
-                            <div class="caption left-align">
+                            <div class="caption left-align col hide-on-small-only">
                                 <h4 class="slide-text bold-text">
                                     Ancestry testing
                                 </h4>
@@ -589,8 +590,8 @@
                                 </a>
 
                             </div>
-                            <div class="col right s12 m6">
-                                <canvas class="right-align marginTop30" id="polarArea" width="400" height="200"></canvas>
+                            <div class="col s12 m6 right">
+                                <canvas class="right-align marginTop30" id="polarArea" width="450" height="200"></canvas>
                                 <img src="#" alt="">
                             </div>
 
