--- a/become.html
+++ b/become.html
@@ -58,10 +58,10 @@
 <!--============================== SLIDER ===========================-->       
     <div class="slider">
         <ul class="slides">
-
           <li>
-            <img src="img/slides/slide2.jpg"> 
-            <div class="caption left-align">
+            <img src="img/slides/slide2.jpg" class="slide"> 
+            <img src="img/slides/slide2m.jpg" class="slideM"> 
+            <div class="caption left-align hide-on-med-and-down">
                 <h4 class="slide-text bold-text white-text">
                     MyGEN professional <br>
                     coach <br>
@@ -79,6 +79,16 @@
 <!--============================== MAIN ===========================--> 
 
 <main class="row">
+    <div class="caption center-align hide-on-large-only">
+        <h4 class="slide-text bold-text black-text">
+            MyGEN professional <br>
+            coach <br>
+            program <br>
+        </h4>
+      <h6 class="slide-text light black-text">Lead the next genetically-based <br> supplement and coaching <br> revolution</h6><br>
+      <a href=""><span class="shop black-text">APPLY NOW</span></a>
+      <div class="col s12 divider marginTop30"></div>
+    </div>
 
     <div id="firstMain" class="col s12 center-align">
         <div class="container">
