--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
 <!--============================== SLIDER ===========================-->       
     <div class="slider">
         <ul class="slides">
-
           <li>
-            <img src="img/slides/slide4.jpg"> 
-            <div class="caption left-align">
+            <img src="img/slides/slide4.jpg" class="slide"> 
+            <img src="img/slides/slide4m.jpg" class="slideM"> 
+            <div class="caption left-align hide-on-med-and-down">
                 <h4 class="slide-text bold-text white-text">
                         Quienes Somos
                 </h4>
@@ -83,7 +83,19 @@
 <!--============================== MAIN ===========================--> 
 
 <main class="row animated fadeIn">
-
+    <div class="caption center-align hide-on-large-only">
+        <h4 class="slide-text bold-text black-text">
+                Quienes Somos
+        </h4>
+      <h6 class="slide-text black-text light">
+            Nuestro compromiso es seguir innovando <br>
+            en el campo de la genética personal con el fin de que  <br>
+            las personas conozcan sus limitaciones y capacidades  <br>
+            máximas para adaptar su estilo de vida a la obtención  <br>
+            de mejores beneficios
+        </h6>
+        <div class="col s12 divider marginTop30"></div>
+    </div>
     <div id="firstMain" class="col s12 center-align">
         <div class="container">
             <h5 class="bold-text" >CONTACTO</h5> 
