--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 <!--============================== SLIDER ===========================-->       
     <div class="slider">
         <ul class="slides">
-
           <li>
-            <img src="img/slides/slide1.jpg"> 
-            <div class="caption left-align hide-on-small-only">
+            <img src="img/slides/slide1.jpg" class="slide"> 
+            <img src="img/slides/slide1m.jpg" class="slideM"> 
+            <div class="caption left-align hide-on-med-and-down">
                 <h4 class="slide-text bold-text">
                 Genetic testing for<br>
                 personalized<br>
@@ -81,6 +81,18 @@
 <!--============================== MAIN ===========================--> 
 
 <main class="row">
+
+    <div class="center-align hide-on-large-only">
+        <h4 class="slide-text bold-text">
+        Genetic testing for<br>
+        personalized<br>
+        supplements
+        </h4>
+      <h6 class="slide-text light">Your are unique, so it should be<br>your supplements</h6><br>
+      <a href=""><span class="shop black-text">SHOP NOW</span></a>
+      <div class="col s12 divider marginTop30"></div>
+    </div>
+ 
 
     <div id="firstMain" class="col s12 center-align">
         <div class="container">
