--- a/order.html
+++ b/order.html
@@ -306,7 +306,7 @@
                                 <label for="email_co">Confirm Email</label>
                             </div>
 
-                            <div class="input-field col s6">
+                            <div class="input-field col s12 m6">
                                 <input id="coachNum" type="text" class="validate">
                                 <label for="coachNum">MyGEN Coach number?
                                     <a id="helpGoals" class="tooltipped grey-text hide-on-small-only" data-position="right" data-tooltip="lorem">
@@ -315,7 +315,7 @@
                                 </label>
                             </div>
 
-                            <div class="input-field col s6">
+                            <div class="input-field col s12 m6">
                                 <input id="kit" type="text" id="kit" class="validate">
                                 <label for="kit">Do you have kit? enter the barcode
                                     <a id="helpGoals" class="tooltipped grey-text hide-on-small-only" data-position="right" data-tooltip="lorem">
@@ -359,22 +359,22 @@
                             <input id="streetNum" type="text" class="validate" required>
                             <label for="streetNum">Street number</label>
                         </div>
-                        <div class="input-field col s3">
+                        <div class="input-field col s6 m3">
                             <input id="city" type="text" class="validate" required>
                             <label for="city">City</label>
                         </div>
-                        <div class="input-field col s3">
+                        <div class="input-field col s6 m3">
                             <input id="zip" type="text" class="validate" required>
                             <label for="zip">
                                 ZIP Code<a id="zipTool" class="tooltipped grey-text hide-on-small-only" data-position="right" data-tooltip="lorem"><i class="material-icons" style="font-size: 20px">help_outline</i>
                                 </a>
                             </label>
                         </div>
-                        <div class="input-field col s3">
+                        <div class="input-field col s6 m3">
                             <input id="comuna" type="text" class="validate" required>
                             <label for="comuna">Comuna</label>
                         </div>
-                        <div class="input-field col s3">
+                        <div class="input-field col s6 m3">
                             <input id="phone" type="number" class="validate" required>
                             <label for="phone">Phone number</label>
                         </div>                
