--- a/products.html
+++ b/products.html
@@ -58,10 +58,10 @@
 <!--============================== SLIDER ===========================-->       
     <div class="slider">
         <ul class="slides">
-
           <li>
-            <img src="img/slides/slide3.jpg"> 
-            <div class="caption left-align hide-on-small-only">
+            <img src="img/slides/slide3.jpg" class="slide"> 
+            <img src="img/slides/slide3m.jpg" class="slideM"> 
+            <div class="caption left-align hide-on-med-and-down">
                 <h4 class="slide-text bold-text">
                 Genetically tailored <br>
                 supplements for <br>
@@ -79,7 +79,15 @@
 <!--============================== MAIN ===========================--> 
 
 <main class="row">
-
+    <div class="center-align hide-on-large-only">
+        <h4 class="slide-text bold-text">
+        Genetically tailored <br>
+        supplements for <br>
+        achieving your goals
+        </h4>
+      <h6 class="slide-text light">Your genetic code is complicated. <br> But we use it for making the achievement <br> of your goals simple</h6><br>
+      <div class="col s12 divider marginTop30"></div>    
+    </div>
     <div id="firstMain" class="col s12 center-align">
         <div class="container">
             <h5 class="bold-text" >SCIENTIFICALLY VALIDATED</h5> 
@@ -119,6 +127,9 @@
         </div>
     </div>
 
+    <div class="col s12 show-on-small-only white-text orange center-align notCompatible">
+        <h5>Not compatible, please look at this on a computer or tablet</h5>
+    </div>
     <div class="col s12 center-align table animated fadeIn" id="sportTable">
         <div class="col s12 m12 l6">
             <div class="col s10 m8 l8 push-s1 push-m2 push-l2" id="life">
@@ -275,11 +286,11 @@
                     <div class="col s12 ">
                         <div class="col s1 m1"></div>
                         <div class="col s11 m10">
-                            <div class="col s2 m1">Rank</div>
+                            <div class="col s1 m1">Rank</div>
                             <div class="col s2 m2">Goal</div>
                             <div class="col s2 m2">Trait</div>
                             <div class="col s2 m2">Gene</div>
-                            <div class="col s2 m4">Report</div>
+                            <div class="col s4 m4">Report</div>
                         </div>
                     </div>
     
@@ -546,6 +557,10 @@
                     </div>
     
                  </div>   
+    </div>
+
+    <div class="col s12 show-on-small-only white-text grey center-align rotate">
+        <h5>Please rotate your phone to see this content</h5>
     </div>
     </div>
  <!-- Modal Structure -->
