--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="theme-color" content="#e69221">
     <link rel="icon" sizes="192x192" href="favicon.png">
+    <link rel="manifest" href="manifest.json">
     <title>MyGen</title>
 </head>
 <body>
@@ -292,6 +293,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/alertify.min.js"></script>
     <script src="js/validate.js"></script>
+    <script src="sw.js"></script>
     <script>
       $(document).ready(function(){
 
