--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li><a href="">HOW IT WORKS</a></li>
                         <li><a href="success.html">SUCCESS STORIES</a></li>
                         <li><a href="become.html">BECOME A COACH</a></li>
-                        <li><a href="#!" id="shopbtn"><span class="shop">SHOP NOW</span></a></li>
+                        <li><a href="#shop" id="shopbtn" class="modal-trigger"><span class="shop">SHOP NOW</span></a></li>
                         <li><a href="#login" class="min-nav modal-trigger">LOGIN</a></li>
                         <li><a href="activatekit.html" class="min-nav">ACTIVATE KIT</a></li>
                         <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
@@ -49,7 +49,7 @@
                 <li><a href="">HOW IT WORKS</a></li>
                 <li><a href="success.html">SUCCESS STORIES</a></li>
                 <li><a href="become.html">BECOME A COACH</a></li>
-                <li><a href="#!" id="shopbtn"><span>SHOP NOW</span></a></li>
+                <li><a href="#shop" id="shopbtn"><span>SHOP NOW</span></a></li>
                 <li><a href="#login" class="min-nav modal-trigger">SIGN IN</a></li>
                 <li><a href="activatekit.html" class="min-nav">ACTIVATE KIT</a></li>
                 <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
@@ -57,6 +57,52 @@
         </ul>
 <!-- mobile-demo -->    
 <!--============================== FIN NAV ===========================--> 
+
+<div class="col s12 shopMobile waves-effect hide-on-large-only">
+    shop now
+</div>
+
+<div class="row shopMobileContent hide-on-large-only">
+    <div class="container">
+        <div class="col s12 center">
+            <div class="col s12 right ">
+                <i class="material-icons right closeMobileContent">close</i>
+            </div>
+            <form action="">
+                <div class="input-field col s12">
+                    <select>
+                        <option value="" disabled selected>Choose your option</option>
+                        <option value="1">Option 1</option>
+                        <option value="2">Option 2</option>
+                        <option value="3">Option 3</option>
+                    </select>
+                    <label>Materialize Multiple Select</label>
+                </div>
+                <div class="input-field col s12">
+                    <select>
+                        <option value="" disabled selected>Choose your option</option>
+                        <option value="1">Option 1</option>
+                        <option value="2">Option 2</option>
+                        <option value="3">Option 3</option>
+                    </select>
+                    <label>Materialize Multiple Select</label>
+                </div>
+                <button class="col s4 push-s4 orange waves-effect center-align btn-large white-text">
+                    GO!
+                </button>
+                <div class="col s12 center-align">
+
+                    <p>Already MyGEN member? </p>
+
+                    <span>
+                        <a href="" class="orange-text">Sign In here </a> to check your results, Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    </span>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 <!--============================== SLIDER ===========================-->       
     <div class="slider">
@@ -205,7 +251,52 @@
             <a href="#!" class="modal-close waves-effect waves-red btn-flat">CANCELAR</a>
         </div>
     </div>
-<!--============================== LOGIN ===========================-->       
+<!--============================== LOGIN ===========================-->  
+<!--============================== SHOP ===========================--> 
+<div id="shop" class="modal">
+        <div class="modal-content center-align rotateOutDownLeft">
+            <div class="container">
+                <div class="col s12 center">
+                    <form action="">
+                        <div class="input-field col s12">
+                            <select>
+                                <option value="" disabled selected>Choose your option</option>
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                            </select>
+                            <label>Materialize Multiple Select</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <select>
+                                <option value="" disabled selected>Choose your option</option>
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                            </select>
+                            <label>Materialize Multiple Select</label>
+                        </div>
+                        <button class="col s4 push-s4 orange waves-effect center-align btn-large white-text">
+                            GO!
+                        </button>
+                        <div class="col s12 center-align">
+
+                            <p>Already MyGEN member? </p>
+
+                            <span>
+                                <a href="" class="orange-text">Sign In here </a> to check your results, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut labore
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-red btn-flat">CANCELAR</a>
+        </div>
+    </div>
+<!--============================== SHOP ===========================-->       
 <!--============================== FOOTER ===========================-->          
     <footer class="page-footer">
         <div class="footer">
@@ -293,6 +384,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/alertify.min.js"></script>
     <script src="js/validate.js"></script>
+    <script src="js/shopMobile.js"></script>
     <script src="sw.js"></script>
     <script>
       $(document).ready(function(){
@@ -304,6 +396,7 @@
             });
             new WOW().init();
             $('#login').modal();
+            $('#shop').modal();
             
 
     window.addEventListener("load",function() {
