--- a/become.html
+++ b/become.html
@@ -277,7 +277,7 @@
             </div>
 
             <div class="col s12 hide marginTop30 paddingBottom15 left-align contentM" id="sportM">
-                <div class="col s12 m6 padding15 marginTop30 left-align">
+                <div class="col s12 padding15 marginTop30 left-align">
                     <div class="col s12 grey lighten-5 padding0 borderRadius15px">
 
                         <div class="col s12 headerSupp orange lighten-2 bold-text">
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="col s12 hide marginTop30 paddingBottom15 left-align contentM" id="nutriM">
-                <div class="col s12 m6 padding15 marginTop30 left-align">
+                <div class="col s12  padding15 marginTop30 left-align">
                     <div class="col s12 grey lighten-5 padding0 borderRadius15px">
 
                         <div class="col s12 headerSupp orange lighten-2 bold-text">
@@ -357,7 +357,7 @@
                 </div>
             </div>
             <div class="col s12 hide marginTop30 paddingBottom15 left-align contentM" id="skinM">
-                <div class="col s12 m6 padding15 marginTop30 left-align">
+                <div class="col s12  padding15 marginTop30 left-align">
                     <div class="col s12 grey lighten-5 padding0 borderRadius15px">
 
                         <div class="col s12 headerSupp orange lighten-2 bold-text">
@@ -397,7 +397,7 @@
                 </div>
             </div>
             <div class="col s12 hide marginTop30 paddingBottom15 left-align contentM" id="wellnessM">
-                <div class="col s12 m6 padding15 marginTop30 left-align">
+                <div class="col s12 padding15 marginTop30 left-align">
                     <div class="col s12 grey lighten-5 padding0 borderRadius15px">
 
                         <div class="col s12 headerSupp orange lighten-2 bold-text">
