--- a/products.html
+++ b/products.html
@@ -111,7 +111,7 @@
             <center><p class="bold-text">MyGEN categories</p></center>
             <div id="secondMainImgP" class="col s12">
                 <div class="col s6 m3" id="sport">
-                    <img src="img/icons/muscles.svg"  class="wow fadeIn" data-wow-delay=".1s" alt="">
+                    <img src="img/icons/muscles.svg" class="wow fadeIn"  data-wow-delay=".2s" alt="">
                     <p class="bold-text">Sports and active life</p>
                 </div>
                 <div class="col s6 m3" id="weight">
@@ -119,7 +119,7 @@
                     <p class="bold-text">Weight control</p>
                 </div>
                 <div class="col s6 m3" id="beauty">
-                    <img src="img/icons/make-up.svg" class="wow fadeIn" data-wow-delay=".3s" alt="">
+                    <img src="img/icons/makeup.svg" class="wow fadeIn" data-wow-delay=".3s" alt="">
                     <p class="bold-text">Beauty</p>
                 </div>
                 <div class="col s6 m3" id="wellness">
@@ -938,6 +938,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/products.js"></script>
     <script src="js/shopMobile.js"></script>
+    <script src="js/changeColorGoal.js"></script>
     <script src="sw.js"></script>
     <script>
       $(document).ready(function(){
